# creature

./: .gitignore  README.md  pyproject.toml  render_scene.py  requirements.txt
config/: defaults.py  sizes.py  timings.py
core/: anchors.py  geometry.py  layout.py  logger.py  motion.py
creature/: myline_m_creature.py
creature/actions/: blink_action.py  hop_action.py  look_action.py  point_action.py  walk_action.py  wave_action.py
creature/parts/: arms.py  body_m.py  eyes.py  feet.py  hands.py  hat.py  legs.py  mouth.py  nose.py
creature/poses/: happy_pose.py  neutral_pose.py  pointing_pose.py  teacher_pose.py  thinking_pose.py
creature/rigs/: arm_rig.py  body_rig.py  face_rig.py  leg_rig.py
docs/: animation_notes.md  creature_design_notes.md  file_responsibilities.md  project_plan.md  running_animations.md
mathlab_creature/: cli.py
mathlab_creature/config/: colors.py  defaults.py  logging_config.py
mathlab_creature/core/: anchors.py  layout.py  logger.py  motion.py  naming.py
mathlab_creature/creature/: myline_m_creature.py
mathlab_creature/props/: axis_plane.py  formula_card.py  math_board.py  pointer_stick.py
mathlab_mylinehub_creature.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
props/: axis_plane.py  formula_card.py  math_board.py  pointer_stick.py
scenes/character/: mascot_intro_scene.py  mascot_point_scene.py  mascot_teach_scene.py  mascot_walk_scene.py  mascot_wave_scene.py
scenes/lessons/: coordinates_intro_scene.py  matrix_intro_scene.py  vectors_intro_scene.py
scenes/tests/: test_body_scene.py  (+7 more)
(+40 files in other folders)
