[project]
name = "mathlab-mylinehub-creature"
version = "0.1.0"
description = "MathLab MYLINEHUB teaching mascot system"
authors = [
  { name = "mylinehub", email = "your-email@example.com" }
]
dependencies = [
  "manimgl",
  "numpy"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# ✅ Auto-discover only inside mathlab_creature
[tool.setuptools.packages.find]
include = ["mathlab_creature*"]

# ✅ CLI entry point
[project.scripts]
creature = "mathlab_creature.cli:main"